*SVN*

# Add a #dbman attr_reader for CGI::Session and make CGI::Session::CookieStore#generate_digest public so it's easy to generate digests
using the cookie store's secret. [Rick]

* Added Request#url that returns the complete URL used for the request [DHH]

* Extract dynamic scaffolding into a plugin.  #7700 [Josh Peek]

* Added user/password options for url_for to add http authentication in a URL [DHH]

* Fixed that FormTagHelper#text_area_tag should disregard :size option if it's not a string [Brendon Davidson]

* Set the original button value in an attribute of the button when using the :disable_with key with submit_tag, so that the original can be restored later. [Jamis Buck]

* session_enabled? works with session :off.  #6680 [Catfish]

* Added :port and :host handling to UrlRewriter (which unified url_for usage, regardless of whether it's called in view or controller) #7616 [alancfrancis]

* Allow send_file/send_data to use a registered mime type as the :type parameter #7620 [jonathan]

* Allow routing requirements on map.resource(s) #7633 [quixoten]. Example:

  map.resources :network_interfaces, :requirements => { :id => /^\d+\.\d+\.\d+\.\d+$/ }

* Cookie session store: empty and unchanged sessions don't write a cookie.  [Jeremy Kemper]

* Added helper(:all) as a way to include all helpers from app/helpers/**/*.rb in ApplicationController [DHH]

* Integration tests: introduce methods for other HTTP methods.  #6353 [caboose]

* Routing: better support for escaped values in route segments.  #7544 [Chris
Roos]
